fix: use the latest roseau package