@@ -9,21 +9,36 @@ version '1.0-SNAPSHOT'
 
 compileJava {
     options.encoding = 'UTF-8'
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+    options.compilerArgs += ["--enable-preview"]
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+    options.compilerArgs += ["--enable-preview"]
+}
+
+test {
+    jvmArgs '--enable-preview'
 }
 
 repositories {
     mavenCentral()
     mavenLocal()
     maven {
+        name = "IntelliJ"
         url 'https://packages.jetbrains.team/maven/p/ij/intellij-dependencies'
+    }
+    maven {
+        name = "Roseau"
+        url = "https://maven.pkg.github.com/alien-tools/roseau"
+        credentials {
+            username = project.findProperty("gpr.user")
+            password = project.findProperty("gpr.key")
+        }
     }
 }
 
@@ -32,6 +47,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'com.github.maracas:roseau:0.0.2-SNAPSHOT'
 }
 
 jar {
@@ -73,13 +89,15 @@ idea {
 run {
     jvmArgs = [
             "-XX:InitialHeapSize=2G",
-            "-XX:MaxHeapSize=2G"
+            "-XX:MaxHeapSize=2G",
+            "--enable-preview"
     ]
 }
 
 runShadow {
     jvmArgs = [
             "-XX:InitialHeapSize=2G",
-            "-XX:MaxHeapSize=2G"
+            "-XX:MaxHeapSize=2G",
+            "--enable-preview"
     ]
 }
